@@ -1,6 +1,6 @@
 FROM maven:3.6.0-jdk-11-slim as maven
-ENV wfly=14.0.1.Final
-ENV JAVA_OPTS="-Djava.net.preferIPv4Stack=true -Xms2g -Xmx2g -XX:+UnlockExperimentalVMOptions -XX:+UseZGC"
+ENV wfly=15.0.0.Final
+ENV JAVA_OPTS="-Djava.net.preferIPv4Stack=true -Xms2g -Xmx2g"
 WORKDIR /wildfly
 COPY src src
 COPY pom.xml pom.xml
@@ -8,7 +8,7 @@ COPY wildfly-config.txt wildfly-config.txt
 RUN apt-get update
 RUN apt-get install -yqq wget
 RUN wget -q -O- http://download.jboss.org/wildfly/$wfly/wildfly-$wfly.tar.gz | tar xz
-RUN wget -q http://central.maven.org/maven2/mysql/mysql-connector-java/5.1.47/mysql-connector-java-5.1.47.jar -O mysql-connector-java.jar
+RUN wget -q http://central.maven.org/maven2/mysql/mysql-connector-java/8.0.13/mysql-connector-java-8.0.13.jar -O mysql-connector-java.jar
 RUN mvn clean package -q
 RUN ./wildfly-$wfly/bin/jboss-cli.sh --file=wildfly-config.txt
 CMD ./wildfly-$wfly/bin/standalone.sh -b 0.0.0.0
